1.7.249 Make InChI ignore vsites.

1.7.248 Add consider_stereo flag to FindDistinctFragments.
        Fix missing call to updateFragids in ImportSdf.

1.7.247 Include pseudos when validating against nonbonded contacts [DESRESCode#4042]
        Fix missing shlib version on msys.so.

1.7.246 Fix msys.Load(jobid) for both return types of yas_job.input_ark
        Read CRYSIN records from mol2 files.
        Wrap ImportPDBUnitCell.
        Added periodic option to System.findBonds.
        Add docs on msys.sequence and a few other tools.
        Added color option to Graph.

1.7.245 Use bytearray for dtr unsigned char fields.
        New "degree" selection keyword for bonds between real atoms.

1.7.244 Make "ion" selection atomic number and bond based.
        Change old "ion" selection to "legacy_ion".
        Handle ComputeTopologicalIds for systems with crazy pseudos.
        Handle nonconsecutive resids in mol2 files.
        Avoid crashing in find-contacts for unreasonable coordinates.
        Fix for undecodeable bytes in DtrReader.keyvals [DESRESCode#4002].

1.7.243 Python3.7.

1.7.242 Atomselection bug for 'all'.

1.7.241 Fix for dms-dump.
          Docs for molfile trajectory writing.
          Triclinic support for pfx.
          Add dms-validate check for virtuals in multiple virtual tables.

1.7.240 Added ReplaceTableWithSortedTerms.
          Implement dms-diff in python instead of shell.
          Fix the Graph.atoms method.
          Use inchi/1.05.
          Make msys.Graph check for duplicates.
          Tweaks to the build for external users.

1.7.239 DESRESCode#3974: Fix some broken tool scripts.

1.7.238 Fix broken lib-python3 from 1.7.237.
          DESRESCode#3964: fix mol2 reading and writing.

1.7.237 Use new sconsutils; should affect developers only.

1.7.235 Add a 'moe' option to msys.SaveMol2 to output guanidinium
          groups MOE can will parse correctly. This option is turned